--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ PRODUCT_DATASOURCE_URL=jdbc:oracle:thin:@//localhost:1521/freepdb1
 PRODUCT_DATASOURCE_USERNAME=WS_PRODUCT
 PRODUCT_DATASOURCE_PASSWORD=WS_PRODUCT
 PRODUCT_SERVER_PORT=8090
+
+ORDER_DATASOURCE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
+ORDER_DATASOURCE_URL=jdbc:oracle:thin:@//localhost:1521/freepdb1
+ORDER_DATASOURCE_USERNAME=WS_ORDER
+ORDER_DATASOURCE_PASSWORD=WS_ORDER
+ORDER_SERVER_PORT=8091
