--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ ORDER_DATASOURCE_URL=jdbc:oracle:thin:@//localhost:1521/freepdb1
 ORDER_DATASOURCE_USERNAME=WS_ORDER
 ORDER_DATASOURCE_PASSWORD=WS_ORDER
 ORDER_SERVER_PORT=8091
+
+INVENTORY_DATASOURCE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
+INVENTORY_DATASOURCE_URL=jdbc:oracle:thin:@//localhost:1521/freepdb1
+INVENTORY_DATASOURCE_USERNAME=WS_INVENTORY
+INVENTORY_DATASOURCE_PASSWORD=WS_INVENTORY
+INVENTORY_SERVER_PORT=8092
