--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+API_GATEWAY_PORT=8080
+
 PRODUCT_DATASOURCE_DRIVER_CLASS_NAME=oracle.jdbc.OracleDriver
 PRODUCT_DATASOURCE_URL=jdbc:oracle:thin:@//localhost:1521/freepdb1
 PRODUCT_DATASOURCE_USERNAME=WS_PRODUCT
